Naive and incorrect version of Challenge1
Uses regex to find a number in the input, instead of parsing it.
No tests.

--- a/fly.toml
+++ b/fly.toml
@@ -8,3 +8,10 @@ app = "protohackers-vgrigoriu"
 
   [[services.ports]]
     port = 2000
+
+[[services]]
+  internal_port = 2001
+  protocol = "tcp"
+
+  [[services.ports]]
+    port = 2001
